--- a/index.html
+++ b/index.html
@@ -13,163 +13,194 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="page-header">
-      <nav>
-        <a class="logo link" href="./index.html"
-          >WEB<span class="logo-accent">STUDIO</span></a
-        >
-        <ul class="site-nav">
-          <li><a class="header-link link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="header-link link" href="#">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="header-nav container">
+        <nav class="main-nav">
+          <a class="logo link" href="./index.html"
+            >WEB<span class="logo-accent">STUDIO</span></a
+          >
+          <ul class="site-nav">
+            <li class="item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="item">
+              <a class="header-link link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <ul class="header-contacts">
-        <li>
-          <a class="header-contact link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-contact link" href="tel:+11(000)1111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+        <ul class="header-contacts">
+          <li class="item">
+            <a class="header-contact link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="header-contact link" href="tel:+11(000)1111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-header">Effective Solutions for Your Business</h1>
-        <button class="hero-button button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-header">Effective Solutions for Your Business</h1>
+          <button class="hero-button button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <section class="features">
-        <!-- <h2>section 2</h2> -->
-        <ul>
-          <li>
-            <h3 class="features-header">Strategy</h3>
-            <p class="features-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-header">Punctuality</h3>
-            <p class="features-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-header">Diligence</h3>
-            <p class="features-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-header">Technologies</h3>
-            <p class="features-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <h2 class="visually-hidden">Features</h2>
+        <div class="container">
+          <ul class="list-features list">
+            <li class="item">
+              <h3 class="features-header">Strategy</h3>
+              <p class="features-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-header">Punctuality</h3>
+              <p class="features-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-header">Diligence</h3>
+              <p class="features-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-header">Technologies</h3>
+              <p class="features-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="illustrations">
-        <h2 class="section-header">What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/photo-1.jpg"
-              width="360"
-              height="300"
-              alt="desktop PC apps"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/photo-2.jpg"
-              width="360"
-              height="300"
-              alt="communication via messegers"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/photo-3.jpg"
-              width="360"
-              height="300"
-              alt="mobile apps"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-header">What are we doing</h2>
+          <ul class="list-services list">
+            <li class="item">
+              <img
+                src="./images/photo-1.jpg"
+                width="360"
+                height="300"
+                alt="desktop PC apps"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/photo-2.jpg"
+                width="360"
+                height="300"
+                alt="communication via messegers"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/photo-3.jpg"
+                width="360"
+                height="300"
+                alt="mobile apps"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="our-team">
-        <h2 class="section-header">Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/photo-guerrero.jpg"
-              width="264"
-              height="260"
-              alt="Mark Guerrero"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/photo-ford.jpg"
-              width="264"
-              height="260"
-              alt="Tom Ford"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/photo-garcia.jpg"
-              width="264"
-              height="260"
-              alt="Camilla Garcia"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/photo-wilson.jpg"
-              width="264"
-              height="260"
-              alt="Daniel Wilson"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-header">Our Team</h2>
+          <ul class="list-team list">
+            <li class="item">
+              <img
+                src="./images/photo-guerrero.jpg"
+                width="264"
+                height="260"
+                alt="Mark Guerrero"
+              />
+              <div class="team-bio">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/photo-ford.jpg"
+                width="264"
+                height="260"
+                alt="Tom Ford"
+              />
+              <div class="team-bio">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/photo-garcia.jpg"
+                width="264"
+                height="260"
+                alt="Camilla Garcia"
+              />
+              <div class="team-bio">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/photo-wilson.jpg"
+                width="264"
+                height="260"
+                alt="Daniel Wilson"
+              />
+              <div class="team-bio">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >WEB<span class="footer-logo-accent">STUDIO</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >WEB<span class="footer-logo-accent">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
