footer logo margin eliminated, portfolio menu fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <main>
       <section class="portfolio">
         <h1 class="visually-hidden">All</h1>
-        <div class="menu-container">
+        <div class="container">
           <ul class="portfolio-menu">
             <li class="item">
               <button class="menu-button button" type="button">All</button>
